# mall

./: .Rbuildignore  .coverage  .gitignore  .nojekyll  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  NAMESPACE  README.Rmd  README.md  _environment  _pkgdown.yml  _quarto.yml  authors.html  index.html  index.qmd  objects.json  pkgdown.yml  robots.txt  search.json  sitemap.xml  styles.css  theme-dark.scss  theme.scss
R/: data-reviews.R  defaults.R  llm-backend-generate.R  llm-backend-prompt.R  llm-classify.R  llm-custom.R  llm-extract.R  llm-generate.R  llm-init.R  llm-sentiment.R  llm-summarize.R  llm-translate.R  llm-use.R  llm-vec-generate.R  llm.R  llm_classify.R  m-backend-generate.R  m-backend-prompt.R  m-backend-submit.R  m-cache.R  m-defaults.R  m-vec-prompt.R  mall-backend-generate.R  mall-backend-prompt.R  mall-init.R  mall.R  utils.R
articles/: caching.html  caching.qmd  databricks.html  databricks.qmd  performance.html  performance.qmd
data/: reviews.rda
docs/: LICENSE.html  index.html  search.json
man/: llm_classify.Rd  llm_custom.Rd  llm_extract.Rd  llm_sentiment.Rd  llm_summarize.Rd  llm_translate.Rd  llm_use.Rd  m_backend_generate.Rd  m_backend_submit.Rd  reviews.Rd
python/: .coverage  MANIFEST.in  README.md  README.qmd  pyproject.toml  requirements.txt
python/mall/: __init__.py  data.py  llm.py  llmvec.py  polars.py  prompt.py
python/tests/: __init__.py  test-llm.py  test_classify.py  test_custom.py  test_extract.py  test_llm.py  test_sentiment.py  test_summarize.py  test_translate.py  test_use.py  test_verify.py
r/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE.html  (+10 more)
(+187 files in other folders)
